--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM hub.c.163.com/library/java:8-alpine
+FROM  hub.c.163.com/library/java:8-alpine
 
 MAINTAINER ycc_ysoft
 
@@ -6,4 +6,4 @@ ADD target/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-apijar", "/app.jar"]
