LocalDate、LocalTime、LocalDateTime序列化问题

--- a/alibaba-sentinel/pom.xml
+++ b/alibaba-sentinel/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
+        <!--引入jackSon-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         
         <dependency>
             <groupId>org.projectlombok</groupId>
