--- a/eureka/src/main/resources/application-eureka1.yml
+++ b/eureka/src/main/resources/application-eureka1.yml
@@ -1,8 +1,9 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka2:8762/eureka/
+      defaultZone: http://localhost:${server.port}/eureka/
 #    register-with-eureka: false
+  
   server:
     enable-self-preservation: false
 spring:
