--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -1,16 +1,18 @@
 spring:
   application:
-    name: api-gateway
-  cloud:
-    config:
-      discovery:
-        enabled: true
-        service-id: CONFIG
-      profile: dev
+    name: api-getway
+server:
+  port: 8762 
+  #cloud:
+    #config:
+      #discovery:
+        #enabled: true
+       # service-id: CONFIG
+     # profile: dev
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:8761/eureka/,http://eureka2:8762/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     prefer-ip-address: true
 management:
@@ -18,3 +20,4 @@ management:
     web:
       exposure:
         include: "*"
+  
