--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: config
+server:
+  port: 8769
   cloud:
     config:
       server:
@@ -8,11 +10,11 @@ spring:
           uri: https://gitlab-demo.com/SpringCloud_Sell/config-repo.git
           username: lly835@163.com
           password: nKfm9JMUfWEh
-#          basedir: /Users/admin/code/myProjects/java/imooc/SpringCloud_Sell/config/basedir
+          basedir: /Users/admin/code/myProjects/java/imooc/SpringCloud_Sell/config/basedir
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:8761/eureka/,http://eureka2:8762/eureka/
+      defaultZone: http://localhost:8761/eureka/
 management:
   endpoints:
     web:
