--- a/eureka/src/main/resources/application-eureka1.yml
+++ b/eureka/src/main/resources/application-eureka1.yml
@@ -2,10 +2,10 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:${server.port}/eureka/
-#    register-with-eureka: false
+    register-with-eureka: false
   
   server:
-    enable-self-preservation: false
+    enable-self-preservation: true
 spring:
   application:
     name: eureka
