--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -25,7 +25,7 @@ spring:
     url: jdbc:mysql://123.56.22.81:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
     username: ycc
     password: 123456
-    
+    driver-class-name: com.mysql.jdbc.Driver
   rabbitmq:
     #host: 127.0.0.1
     port: 5672
