--- a/product/server/src/main/resources/bootstrap.yml
+++ b/product/server/src/main/resources/bootstrap.yml
@@ -12,6 +12,11 @@ spring:
     username: admin
     password: admin
     virtual-host: my_vhost
+  zipkin:
+    base-url: http://localhost:9411
+    enabled: true
+    sender:
+      type: web
 #  cloud:
 #    config:
 #      discovery:
