加入取模比例

--- a/product/server/src/main/resources/bootstrap.yml
+++ b/product/server/src/main/resources/bootstrap.yml
@@ -17,6 +17,9 @@ spring:
     enabled: true
     sender:
       type: web
+  sleuth:
+    sampler:
+      probability: 1     
 #  cloud:
 #    config:
 #      discovery:
