加入config读取配置文件形式

--- a/order/server/src/main/resources/bootstrap.yml
+++ b/order/server/src/main/resources/bootstrap.yml
@@ -20,8 +20,6 @@ spring:
     sampler:
       probability: 1
   datasource:
-    tomcat:
-      init-s-q-l:
     url: jdbc:mysql://123.56.22.81:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
     username: ycc
     password: 123456
@@ -33,6 +31,11 @@ spring:
     password: admin
    
     virtual-host: my_vhost
+  config:
+    discovery:
+      enabled: true
+      service-id: CONFIG
+      profile: dev
 
 
 eureka:
@@ -48,7 +51,7 @@ logging:
 
 
 server:
-  port: 8670
+  port: 8670  
 
   
   
