--- a/product/server/src/main/resources/bootstrap.yml
+++ b/product/server/src/main/resources/bootstrap.yml
@@ -2,8 +2,6 @@ spring:
   application:
     name: product
   datasource:
-    tomcat:
-      init-s-q-l:    
     url: jdbc:mysql://123.56.22.81:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true
     username: ycc
     password: 123456
@@ -20,12 +18,12 @@ spring:
   sleuth:
     sampler:
       probability: 1     
-#  cloud:
-#    config:
-#      discovery:
-#        enabled: true
-#        service-id: CONFIG
-#      profile: dev
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: CONFIG
+      profile: dev
 eureka:
   client:
     service-url:
